# sql-dialect-fmt

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HANDOFF.md  LICENSE-MIT  README.ja.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  action.yml  deny.toml
crates/snow-fmt-cli/: Cargo.toml
crates/snow-fmt-cli/src/: config.rs  main.rs
crates/snow-fmt-cli/tests/: cli.rs
crates/snow-fmt-formatter/: Cargo.toml
crates/snow-fmt-formatter/benches/: format.rs
crates/snow-fmt-formatter/src/: builder.rs  doc.rs  lib.rs  options.rs  sql.rs
crates/snow-fmt-formatter/src/sql/: comments.rs  options.rs  routine_body.rs  spacing.rs
crates/snow-fmt-formatter/tests/: corpus.rs  databricks.rs  databricks_delta.rs  databricks_matrix.rs  ddl.rs  dml.rs  external_corpus.rs  format.rs  object_ddl.rs  phase4_advanced_query.rs  proptest_invariants.proptest-regressions  proptest_invariants.rs  sample_asof.rs  scripting.rs
crates/snow-fmt-formatter/tests/corpus_sample/: 02_dml.sql  03_ddl.sql  04_copy.sql  05_scripting.sql  06_semantic_view.sql
crates/snow-fmt-highlight/: Cargo.toml
crates/snow-fmt-highlight/src/: lib.rs  semantic.rs
crates/snow-fmt-highlight/tests/: classification_matrix.rs  easy_cases.rs  line_endings.rs  semantic_tokens.rs  textmate.rs
crates/snow-fmt-hover/: Cargo.toml
crates/snow-fmt-hover/src/: lib.rs
crates/snow-fmt-hover/tests/: hover.rs
crates/snow-fmt-lexer/: Cargo.toml
crates/snow-fmt-lexer/src/: delimiter.rs  lexer.rs  lib.rs  token.rs
crates/snow-fmt-lexer/tests/: corpus.rs  dialect.rs  easy_cases.rs  line_endings.rs  snowflake_edges.rs
crates/snow-fmt-lsp/: Cargo.toml
crates/snow-fmt-lsp/src/: lib.rs  main.rs
crates/snow-fmt-parser/: Cargo.toml
crates/snow-fmt-parser/src/: ast.rs  builder.rs  event.rs  grammar.rs  input.rs  lib.rs  parser.rs
crates/snow-fmt-parser/src/grammar/: delta.rs  dml.rs  stmt.rs
crates/snow-fmt-parser/tests/: create_function.rs  databricks.rs  databricks_delta.rs  databricks_matrix.rs  ddl.rs  diagnostics.rs  dialect.rs  dml.rs  easy_cases.rs  line_endings.rs  object_ddl.rs  parser.rs  phase2.rs  phase2b.rs  proptest_invariants.rs  resilience.rs  sample_asof.rs  scripting.rs
crates/snow-fmt-syntax/: Cargo.toml
crates/snow-fmt-syntax/src/: dialect.rs  keyword.rs  kind.rs  lang.rs  lib.rs  macros.rs
crates/snow-fmt-test-fixtures/: Cargo.toml
crates/snow-fmt-test-fixtures/src/: lib.rs
crates/snow-fmt-test-support/: Cargo.toml
crates/snow-fmt-test-support/src/: lib.rs
crates/snow-fmt-tree-sitter/: Cargo.toml
crates/snow-fmt-tree-sitter/src/: lib.rs
crates/snow-fmt-tree-sitter/tests/: smoke.rs
crates/snow-fmt-wasm/: Cargo.toml
crates/snow-fmt-wasm/src/: lib.rs
crates/sql-dialect-fmt-cli/: Cargo.toml
crates/sql-dialect-fmt-cli/src/: config.rs  main.rs
crates/sql-dialect-fmt-cli/tests/: cli.rs
crates/sql-dialect-fmt-config/: Cargo.toml
crates/sql-dialect-fmt-config/src/: lib.rs
crates/sql-dialect-fmt-encoding/: Cargo.toml
crates/sql-dialect-fmt-encoding/src/: lib.rs
crates/sql-dialect-fmt-formatter/: Cargo.toml
crates/sql-dialect-fmt-formatter/benches/: format.rs
crates/sql-dialect-fmt-formatter/src/: doc.rs  lib.rs  range.rs  sql.rs
crates/sql-dialect-fmt-formatter/src/sql/: comments.rs  (+9 more)
crates/sql-dialect-fmt-formatter/tests/: alter.rs  copy_into.rs  create_structure.rs  databricks.rs  databricks_corpus.rs  databricks_delta.rs  databricks_matrix.rs  ddl.rs  dml.rs  external_corpus.rs  format.rs  object_ddl.rs  phase4_advanced_query.rs  placeholders.rs  proptest_invariants.proptest-regressions  proptest_invariants.rs  sample_asof.rs  scripting.rs  stage_file_ops.rs
crates/sql-dialect-fmt-highlight/: Cargo.toml
crates/sql-dialect-fmt-highlight/src/: lib.rs  semantic.rs
crates/sql-dialect-fmt-highlight/tests/: classification_matrix.rs  easy_cases.rs  line_endings.rs  semantic_tokens.rs  textmate.rs
crates/sql-dialect-fmt-hover/: Cargo.toml
crates/sql-dialect-fmt-hover/src/: data.rs  generated.rs  lib.rs  scan.rs  spec.rs
crates/sql-dialect-fmt-hover/tests/: hover.rs
crates/sql-dialect-fmt-lexer/: Cargo.toml
crates/sql-dialect-fmt-lexer/benches/: lex.rs
crates/sql-dialect-fmt-lexer/src/: delimiter.rs  lexer.rs  lib.rs  token.rs
crates/sql-dialect-fmt-lexer/tests/: corpus.rs  dialect.rs  easy_cases.rs  line_endings.rs  placeholders.rs  snowflake_edges.rs
crates/sql-dialect-fmt-lint/: Cargo.toml
crates/sql-dialect-fmt-lint/src/: lib.rs
crates/sql-dialect-fmt-lsp/: Cargo.toml
crates/sql-dialect-fmt-lsp/src/: lib.rs  lint.rs  main.rs
crates/sql-dialect-fmt-lsp/tests/: e2e_stdio.rs
crates/sql-dialect-fmt-parser/: Cargo.toml
crates/sql-dialect-fmt-parser/benches/: parse.rs
crates/sql-dialect-fmt-parser/src/: ast.rs  builder.rs  contextual.rs  event.rs  grammar.rs  input.rs  lib.rs  parser.rs
crates/sql-dialect-fmt-parser/tests/: alter_structure.rs  copy_into.rs  create_structure.rs  databricks.rs  databricks_delta.rs  databricks_matrix.rs  ddl.rs  diagnostics.rs  dialect.rs  dml.rs  easy_cases.rs  issues_25_28.rs  lenient_paths.rs  line_endings.rs  object_ddl.rs  parser.rs  phase2.rs  phase2b.rs  proptest_invariants.rs  resilience.rs  sample_asof.rs  scripting.rs  stage_file_ops.rs
crates/sql-dialect-fmt-syntax/: Cargo.toml
crates/sql-dialect-fmt-syntax/src/: dialect.rs  keyword.rs  kind.rs  lib.rs  types.rs
crates/sql-dialect-fmt-test-fixtures/: Cargo.toml
crates/sql-dialect-fmt-test-fixtures/src/: lib.rs
crates/sql-dialect-fmt-test-support/: Cargo.toml
crates/sql-dialect-fmt-test-support/src/: lib.rs
crates/sql-dialect-fmt-text/: Cargo.toml
crates/sql-dialect-fmt-text/src/: lib.rs
crates/sql-dialect-fmt-tree-sitter/: Cargo.toml  build.rs
crates/sql-dialect-fmt-tree-sitter/src/: lib.rs
crates/sql-dialect-fmt-tree-sitter/tests/: smoke.rs
crates/sql-dialect-fmt-wasm/: Cargo.toml
crates/sql-dialect-fmt-wasm/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: formatter_idempotent.rs  lexer_roundtrip.rs  parser_lossless.rs  support.rs
(+303 files in other folders)
