[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.94"
license = "0BSD"
repository = "https://github.com/hjosugi/sql-dialect-fmt"
homepage = "https://github.com/hjosugi/sql-dialect-fmt"
readme = "README.md"
authors = ["sql-dialect-fmt contributors"]
keywords = ["snowflake", "sql", "formatter", "parser"]
categories = ["development-tools", "parser-implementations"]

# Optimize release builds for the "fast by default" goal.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
