[package]
name = "snow-fmt-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository.workspace = true
description = "snow-fmt: an opinionated Snowflake SQL formatter (command-line)."

[[bin]]
name = "snow-fmt"
path = "src/main.rs"

[dependencies]
snow-fmt-encoding = { path = "../snow-fmt-encoding" }
snow-fmt-formatter = { path = "../snow-fmt-formatter" }
