[package]
name = "snow-fmt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "snow-fmt: an opinionated Snowflake SQL formatter (command-line)."

[[bin]]
name = "snow-fmt"
path = "src/main.rs"

[dependencies]
snow-fmt-encoding = { path = "../snow-fmt-encoding", version = "0.1.0" }
snow-fmt-formatter = { path = "../snow-fmt-formatter", version = "0.1.0" }
