[package]
name = "sql-dialect-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "sql-dialect-fmt: an opinionated SQL dialect formatter (command-line)."

[[bin]]
name = "snow-fmt"
path = "src/bin/snow-fmt.rs"
test = false

[dependencies]
rayon = "1"
serde = { version = "1", features = ["derive"] }
snow-fmt-encoding = { path = "../snow-fmt-encoding", version = "0.1.0" }
snow-fmt-formatter = { path = "../snow-fmt-formatter", version = "0.1.0" }
snow-fmt-parser = { path = "../snow-fmt-parser", version = "0.1.0" }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
