[package]
name = "snow-fmt-formatter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Generic Wadler/Prettier-style Doc IR + width-aware printer, plus the Snowflake SQL formatting rules built on the lossless CST."

[dependencies]
snow-fmt-syntax = { path = "../snow-fmt-syntax", version = "0.1.0", features = ["rowan"] }
snow-fmt-parser = { path = "../snow-fmt-parser", version = "0.1.0" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
insta = "1.48.0"
snow-fmt-lexer = { path = "../snow-fmt-lexer", version = "0.1.0" }
snow-fmt-test-fixtures = { path = "../snow-fmt-test-fixtures", version = "0.1.0" }
snow-fmt-test-support = { path = "../snow-fmt-test-support", version = "0.1.0" }

[[bench]]
name = "format"
harness = false
