[package]
name = "snow-fmt-formatter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Generic Wadler/Prettier-style Doc IR + width-aware printer, plus the Snowflake SQL formatting rules built on the lossless CST."

[dependencies]
biome_formatter = "=0.5.7"
biome_js_formatter = "=0.5.7"
biome_js_parser = "=0.5.7"
biome_js_syntax = "=0.5.7"
# Biome 0.5.x internal crates are not semver-compatible across patch releases.
# Keep the formatter/parser/syntax graph on one exact patch level.
biome_console = "=0.5.7"
biome_deserialize = "=0.5.7"
biome_diagnostics = "=0.5.7"
biome_js_factory = "=0.5.7"
biome_json_factory = "=0.5.7"
biome_json_parser = "=0.5.7"
biome_json_syntax = "=0.5.7"
biome_parser = "=0.5.7"
biome_rowan = "=0.5.7"
biome_text_edit = "=0.5.7"
biome_text_size = "=0.5.7"
biome_unicode_table = "=0.5.7"
snow-fmt-syntax = { path = "../snow-fmt-syntax", version = "0.1.0", features = ["rowan"] }
snow-fmt-lexer = { path = "../snow-fmt-lexer", version = "0.1.0" }
snow-fmt-parser = { path = "../snow-fmt-parser", version = "0.1.0" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
insta = "1.48.0"
snow-fmt-test-fixtures = { path = "../snow-fmt-test-fixtures", version = "0.1.0" }
snow-fmt-test-support = { path = "../snow-fmt-test-support", version = "0.1.0" }
proptest = "1"

[[bench]]
name = "format"
harness = false
