[package]
name = "snow-fmt-highlight"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository.workspace = true
description = "Lexical syntax highlighting primitives for Snowflake SQL."

[dependencies]
snow-fmt-lexer = { path = "../snow-fmt-lexer" }
snow-fmt-syntax = { path = "../snow-fmt-syntax" }

[dev-dependencies]
snow-fmt-test-fixtures = { path = "../snow-fmt-test-fixtures" }
snow-fmt-test-support = { path = "../snow-fmt-test-support" }
serde_json = "1"
