[package]
name = "snow-fmt-highlight"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Lexical syntax highlighting primitives for Snowflake SQL."

[dependencies]
snow-fmt-lexer = { path = "../snow-fmt-lexer", version = "0.1.0" }
snow-fmt-syntax = { path = "../snow-fmt-syntax", version = "0.1.0" }

[dev-dependencies]
snow-fmt-test-fixtures = { path = "../snow-fmt-test-fixtures", version = "0.1.0" }
snow-fmt-test-support = { path = "../snow-fmt-test-support", version = "0.1.0" }
serde_json = "1"
