[package]
name = "snow-fmt-hover"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LSP/editor-ready hover information for Snowflake SQL types, procedures, and tasks."

[dependencies]
snow-fmt-lexer = { path = "../snow-fmt-lexer" }
snow-fmt-syntax = { path = "../snow-fmt-syntax" }
