[package]
name = "snow-fmt-hover"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "LSP/editor-ready hover information for Snowflake SQL types, procedures, and tasks."

[dependencies]
snow-fmt-lexer = { path = "../snow-fmt-lexer", version = "0.1.0" }
snow-fmt-syntax = { path = "../snow-fmt-syntax", version = "0.1.0" }
