[package]
name = "snow-fmt-lexer"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Hand-written, lossless, error-resilient lexer for Snowflake SQL (snow-fmt toolchain)."

[dependencies]
snow-fmt-syntax = { path = "../snow-fmt-syntax" }

[dev-dependencies]
# Let integration tests call into the syntax crate directly (e.g. keyword_kind).
snow-fmt-syntax = { path = "../snow-fmt-syntax" }
