[package]
name = "snow-fmt-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository.workspace = true
description = "Language Server Protocol server for Snowflake SQL (formatting, semantic tokens, diagnostics)."

[[bin]]
name = "snow-fmt-lsp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.97"
serde = "1"
serde_json = "1"
snow-fmt-formatter = { path = "../snow-fmt-formatter" }
snow-fmt-highlight = { path = "../snow-fmt-highlight" }
snow-fmt-hover = { path = "../snow-fmt-hover" }
snow-fmt-parser = { path = "../snow-fmt-parser" }
snow-fmt-syntax = { path = "../snow-fmt-syntax", features = ["rowan"] }
