[package]
name = "snow-fmt-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Language Server Protocol server for Snowflake SQL (formatting, semantic tokens, diagnostics)."

[[bin]]
name = "snow-fmt-lsp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.97"
serde = "1"
serde_json = "1"
snow-fmt-formatter = { path = "../snow-fmt-formatter", version = "0.1.0" }
snow-fmt-highlight = { path = "../snow-fmt-highlight", version = "0.1.0" }
snow-fmt-hover = { path = "../snow-fmt-hover", version = "0.1.0" }
snow-fmt-parser = { path = "../snow-fmt-parser", version = "0.1.0" }
snow-fmt-syntax = { path = "../snow-fmt-syntax", version = "0.1.0", features = ["rowan"] }
