[package]
name = "snow-fmt-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Error-resilient, event-based recursive-descent parser building a lossless rowan CST for Snowflake SQL."

[dependencies]
snow-fmt-syntax = { path = "../snow-fmt-syntax", version = "0.1.0", features = ["rowan"] }
snow-fmt-lexer = { path = "../snow-fmt-lexer", version = "0.1.0" }
rowan = "0.15"

[dev-dependencies]
snow-fmt-test-fixtures = { path = "../snow-fmt-test-fixtures", version = "0.1.0" }
snow-fmt-test-support = { path = "../snow-fmt-test-support", version = "0.1.0" }
