[package]
name = "snow-fmt-syntax"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository.workspace = true
description = "Syntax kinds and lossless-tree (rowan) language definition for snow-fmt, a Snowflake SQL toolchain."

[dependencies]
# rowan provides the green/red lossless syntax tree (the same library rust-analyzer uses).
# It is optional so that SyntaxKind + the lexer build and test with zero network/deps;
# the parser crate will enable this feature.
rowan = { version = "0.15", optional = true }

[features]
default = []
rowan = ["dep:rowan"]
