[package]
name = "snow-fmt-test-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedded Snowflake SQL golden fixtures used by snow-fmt tests."
# Internal-only: test fixtures, never published to crates.io.
publish = false

[dependencies]
