[package]
name = "snow-fmt-test-support"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared assertion helpers for snow-fmt integration tests."

[dependencies]
snow-fmt-highlight = { path = "../snow-fmt-highlight" }
snow-fmt-lexer = { path = "../snow-fmt-lexer" }
snow-fmt-parser = { path = "../snow-fmt-parser" }
