[package]
name = "sql-dialect-fmt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "sql-dialect-fmt: an opinionated SQL dialect formatter (command-line)."

[dependencies]
rayon = "1"
serde = { version = "1", features = ["derive"] }
sql-dialect-fmt-encoding = { path = "../sql-dialect-fmt-encoding", version = "1.0.0" }
sql-dialect-fmt-formatter = { path = "../sql-dialect-fmt-formatter", version = "1.0.0" }
sql-dialect-fmt-parser = { path = "../sql-dialect-fmt-parser", version = "1.0.0" }
sql-dialect-fmt-text = { path = "../sql-dialect-fmt-text", version = "1.0.0" }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
