[package]
name = "sql-dialect-fmt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "sql-dialect-fmt: an opinionated SQL dialect formatter (command-line)."
[dependencies]
globset = "0.4"
ignore = "0.4"
rayon = "1"
sql-dialect-fmt-config.workspace = true
sql-dialect-fmt-encoding.workspace = true
sql-dialect-fmt-formatter.workspace = true
sql-dialect-fmt-parser.workspace = true
sql-dialect-fmt-text.workspace = true

[dev-dependencies]
tempfile = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/sql-dialect-fmt-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
