[package]
name = "sql-dialect-fmt-formatter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Generic Wadler/Prettier-style Doc IR + width-aware printer, plus the Snowflake SQL formatting rules built on the lossless CST."
[dependencies]
biome_formatter = "=0.5.7"
biome_js_formatter = "=0.5.7"
biome_js_parser = "=0.5.7"
biome_js_syntax = "=0.5.7"
# Biome 0.5.x internal crates are not semver-compatible across patch releases.
# Keep the formatter/parser/syntax graph on one exact patch level.
biome_console = "=0.5.7"
biome_deserialize = "=0.5.7"
biome_diagnostics = "=0.5.7"
biome_js_factory = "=0.5.7"
biome_json_factory = "=0.5.7"
biome_json_parser = "=0.5.7"
biome_json_syntax = "=0.5.7"
biome_parser = "=0.5.7"
biome_rowan = "=0.5.7"
biome_text_edit = "=0.5.7"
biome_text_size = "=0.5.7"
biome_unicode_table = "=0.5.7"
ruff_formatter = "=0.0.3"
ruff_python_formatter = "=0.0.3"
sql-dialect-fmt-syntax = { path = "../sql-dialect-fmt-syntax", version = "1.0.0", features = ["rowan"] }
sql-dialect-fmt-lexer = { path = "../sql-dialect-fmt-lexer", version = "1.0.0" }
sql-dialect-fmt-parser = { path = "../sql-dialect-fmt-parser", version = "1.0.0" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
insta = "1.48.0"
sql-dialect-fmt-test-fixtures = { path = "../sql-dialect-fmt-test-fixtures" }
sql-dialect-fmt-test-support = { path = "../sql-dialect-fmt-test-support" }
proptest = "1"

[[bench]]
name = "format"
harness = false

[package.metadata.cargo-machete]
ignored = [
    "biome_console",
    "biome_deserialize",
    "biome_diagnostics",
    "biome_js_factory",
    "biome_json_factory",
    "biome_json_parser",
    "biome_json_syntax",
    "biome_parser",
    "biome_rowan",
    "biome_text_edit",
    "biome_text_size",
    "biome_unicode_table",
]
