[package]
name = "sql-dialect-fmt-formatter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Generic Wadler/Prettier-style Doc IR + width-aware printer, plus the Snowflake SQL formatting rules built on the lossless CST."

[features]
default = ["external-formatters"]
external-formatters = ["embedded-javascript", "embedded-python"]
embedded-javascript = [
    "dep:biome_console",
    "dep:biome_deserialize",
    "dep:biome_diagnostics",
    "dep:biome_formatter",
    "dep:biome_js_factory",
    "dep:biome_js_formatter",
    "dep:biome_js_parser",
    "dep:biome_js_syntax",
    "dep:biome_json_factory",
    "dep:biome_json_parser",
    "dep:biome_json_syntax",
    "dep:biome_parser",
    "dep:biome_rowan",
    "dep:biome_text_edit",
    "dep:biome_text_size",
    "dep:biome_unicode_table",
]
embedded-python = [
    "dep:ruff_formatter",
    "dep:ruff_python_formatter",
]
embedded-brace-formatters = []

[dependencies]
biome_formatter = { version = "=0.5.7", optional = true }
biome_js_formatter = { version = "=0.5.7", optional = true }
biome_js_parser = { version = "=0.5.7", optional = true }
biome_js_syntax = { version = "=0.5.7", optional = true }
# Biome 0.5.x internal crates are not semver-compatible across patch releases.
# Keep the formatter/parser/syntax graph on one exact patch level.
biome_console = { version = "=0.5.7", optional = true }
biome_deserialize = { version = "=0.5.7", optional = true }
biome_diagnostics = { version = "=0.5.7", optional = true }
biome_js_factory = { version = "=0.5.7", optional = true }
biome_json_factory = { version = "=0.5.7", optional = true }
biome_json_parser = { version = "=0.5.7", optional = true }
biome_json_syntax = { version = "=0.5.7", optional = true }
biome_parser = { version = "=0.5.7", optional = true }
biome_rowan = { version = "=0.5.7", optional = true }
biome_text_edit = { version = "=0.5.7", optional = true }
biome_text_size = { version = "=0.5.7", optional = true }
biome_unicode_table = { version = "=0.5.7", optional = true }
ruff_formatter = { version = "=0.0.3", optional = true }
ruff_python_formatter = { version = "=0.0.3", optional = true }
sql-dialect-fmt-syntax = { workspace = true, features = ["rowan"] }
sql-dialect-fmt-lexer.workspace = true
sql-dialect-fmt-parser.workspace = true
sql-dialect-fmt-text.workspace = true
unicode-width = "0.2.2"

[dev-dependencies]
criterion = { version = "0.8", default-features = false }
insta = "1.48.0"
sql-dialect-fmt-test-fixtures = { path = "../sql-dialect-fmt-test-fixtures" }
sql-dialect-fmt-test-support = { path = "../sql-dialect-fmt-test-support" }
proptest = "1"

[[bench]]
name = "format"
harness = false

[package.metadata.cargo-machete]
ignored = [
    "biome_console",
    "biome_deserialize",
    "biome_diagnostics",
    "biome_js_factory",
    "biome_json_factory",
    "biome_json_parser",
    "biome_json_syntax",
    "biome_parser",
    "biome_rowan",
    "biome_text_edit",
    "biome_text_size",
    "biome_unicode_table",
]
