[package]
name = "sql-dialect-fmt-highlight"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Lexical syntax highlighting primitives for Snowflake SQL."
[dependencies]
sql-dialect-fmt-lexer = { path = "../sql-dialect-fmt-lexer", version = "1.0.0" }
sql-dialect-fmt-syntax = { path = "../sql-dialect-fmt-syntax", version = "1.0.0" }
sql-dialect-fmt-text = { path = "../sql-dialect-fmt-text", version = "1.0.0" }

[dev-dependencies]
sql-dialect-fmt-test-fixtures = { path = "../sql-dialect-fmt-test-fixtures" }
sql-dialect-fmt-test-support = { path = "../sql-dialect-fmt-test-support" }
serde_json = "1"
