[package]
name = "sql-dialect-fmt-highlight"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Lexical syntax highlighting primitives for Snowflake SQL."
[dependencies]
sql-dialect-fmt-lexer.workspace = true
sql-dialect-fmt-syntax.workspace = true
sql-dialect-fmt-text.workspace = true

[dev-dependencies]
sql-dialect-fmt-test-fixtures = { path = "../sql-dialect-fmt-test-fixtures" }
sql-dialect-fmt-test-support = { path = "../sql-dialect-fmt-test-support" }
serde_json = "1"
