[package]
name = "sql-dialect-fmt-hover"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "LSP/editor-ready hover information for Snowflake SQL types, procedures, and tasks."

[dependencies]
sql-dialect-fmt-lexer = { path = "../sql-dialect-fmt-lexer", version = "0.1.0" }
sql-dialect-fmt-syntax = { path = "../sql-dialect-fmt-syntax", version = "0.1.0" }
