[package]
name = "sql-dialect-fmt-hover"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "LSP/editor-ready hover information for Snowflake SQL types, procedures, and tasks."
[dependencies]
sql-dialect-fmt-lexer.workspace = true
sql-dialect-fmt-syntax.workspace = true
