[package]
name = "sql-dialect-fmt-lexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Hand-written, lossless, error-resilient lexer for Snowflake SQL (sql-dialect-fmt toolchain)."

license = "0BSD"
[dependencies]
sql-dialect-fmt-syntax = { path = "../sql-dialect-fmt-syntax", version = "1.0.0" }
sql-dialect-fmt-text = { path = "../sql-dialect-fmt-text", version = "1.0.0" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
# Let integration tests call into the syntax crate directly (e.g. keyword_kind).
sql-dialect-fmt-syntax = { path = "../sql-dialect-fmt-syntax", version = "1.0.0" }
sql-dialect-fmt-test-fixtures = { path = "../sql-dialect-fmt-test-fixtures" }
sql-dialect-fmt-test-support = { path = "../sql-dialect-fmt-test-support" }

[[bench]]
name = "lex"
harness = false
