[package]
name = "sql-dialect-fmt-lexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Hand-written, lossless, error-resilient lexer for Snowflake SQL (sql-dialect-fmt toolchain)."
[dependencies]
sql-dialect-fmt-syntax.workspace = true
sql-dialect-fmt-text.workspace = true

[dev-dependencies]
criterion = { version = "0.8", default-features = false }
# Let integration tests call into the syntax crate directly (e.g. keyword_kind).
sql-dialect-fmt-syntax.workspace = true
sql-dialect-fmt-test-fixtures = { path = "../sql-dialect-fmt-test-fixtures" }
sql-dialect-fmt-test-support = { path = "../sql-dialect-fmt-test-support" }

[[bench]]
name = "lex"
harness = false
