[package]
name = "sql-dialect-fmt-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Language Server Protocol server for Snowflake SQL (formatting, semantic tokens, diagnostics)."

license = "0BSD"
[[bin]]
name = "sql-dialect-fmt-lsp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.97"
serde = "1"
serde_json = "1"
sql-dialect-fmt-formatter = { path = "../sql-dialect-fmt-formatter", version = "1.0.0" }
sql-dialect-fmt-highlight = { path = "../sql-dialect-fmt-highlight", version = "1.0.0" }
sql-dialect-fmt-hover = { path = "../sql-dialect-fmt-hover", version = "1.0.0" }
sql-dialect-fmt-parser = { path = "../sql-dialect-fmt-parser", version = "1.0.0" }
sql-dialect-fmt-text = { path = "../sql-dialect-fmt-text", version = "1.0.0" }
