[package]
name = "sql-dialect-fmt-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Language Server Protocol server for Snowflake SQL (formatting, semantic tokens, diagnostics)."
[[bin]]
name = "sql-dialect-fmt-lsp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
lsp-server = "0.8"
lsp-types = "0.97"
serde = "1"
serde_json = "1"
sql-dialect-fmt-formatter.workspace = true
sql-dialect-fmt-highlight.workspace = true
sql-dialect-fmt-hover.workspace = true
sql-dialect-fmt-lexer.workspace = true
sql-dialect-fmt-parser.workspace = true
sql-dialect-fmt-text.workspace = true
