[package]
name = "sql-dialect-fmt-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Error-resilient, event-based recursive-descent parser building a lossless rowan CST for Snowflake SQL."
[dependencies]
sql-dialect-fmt-syntax = { path = "../sql-dialect-fmt-syntax", version = "1.0.0", features = ["rowan"] }
sql-dialect-fmt-lexer = { path = "../sql-dialect-fmt-lexer", version = "1.0.0" }
sql-dialect-fmt-text = { path = "../sql-dialect-fmt-text", version = "1.0.0" }
rowan = "0.15"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
sql-dialect-fmt-test-fixtures = { path = "../sql-dialect-fmt-test-fixtures" }
sql-dialect-fmt-test-support = { path = "../sql-dialect-fmt-test-support" }
proptest = "1"

[[bench]]
name = "parse"
harness = false
