[package]
name = "sql-dialect-fmt-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Error-resilient, event-based recursive-descent parser building a lossless rowan CST for Snowflake SQL."
[dependencies]
sql-dialect-fmt-syntax = { workspace = true, features = ["rowan"] }
sql-dialect-fmt-lexer.workspace = true
sql-dialect-fmt-text.workspace = true
rowan = "0.16"

[dev-dependencies]
criterion = { version = "0.8", default-features = false }
sql-dialect-fmt-test-fixtures = { path = "../sql-dialect-fmt-test-fixtures" }
sql-dialect-fmt-test-support = { path = "../sql-dialect-fmt-test-support" }
proptest = "1"

[[bench]]
name = "parse"
harness = false
