[package]
name = "sql-dialect-fmt-syntax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Syntax kinds and lossless-tree (rowan) language definition for sql-dialect-fmt, a Snowflake SQL toolchain."

license = "0BSD"
[dependencies]
# rowan provides the green/red lossless syntax tree (the same library rust-analyzer uses).
# It is optional so that SyntaxKind + the lexer build and test with zero network/deps;
# the parser crate will enable this feature.
rowan = { version = "0.15", optional = true }

[features]
default = []
rowan = ["dep:rowan"]
