[package]
name = "sql-dialect-fmt-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared assertion helpers for sql-dialect-fmt integration tests."
# Internal-only: shared test helpers, never published to crates.io.
publish = false

license = "0BSD"
[dependencies]
sql-dialect-fmt-highlight = { path = "../sql-dialect-fmt-highlight", version = "1.0.0" }
sql-dialect-fmt-lexer = { path = "../sql-dialect-fmt-lexer", version = "1.0.0" }
sql-dialect-fmt-parser = { path = "../sql-dialect-fmt-parser", version = "1.0.0" }
