[package]
name = "sql-dialect-fmt-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared assertion helpers for sql-dialect-fmt integration tests."
# Internal-only: shared test helpers, never published to crates.io.
publish = false
[dependencies]
sql-dialect-fmt-highlight.workspace = true
sql-dialect-fmt-lexer.workspace = true
sql-dialect-fmt-parser.workspace = true
